# eSNP-Sets

./: .gitignore  CMakeLists.txt  commander.cpp  commander.h  functions.h  gzstream.cpp  main.cpp
inc/: functions.h  misc.hpp
src/: commander.cpp  main.cpp
test/: main.cpp
test/inc/: global.h
test/src/: function_test.cpp
